force-app/main/default/objects/Match__c/fields/Location_map__c.field-meta.xml
<CustomField>
    <fullName>Location_map__c</fullName>
    <label>Location map</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>