force-app/main/default/objects/Match__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <inlineHelpText>When will this match be played?</inlineHelpText>
    <label>When</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>