force-app/main/default/objects/Match__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <inlineHelpText>Where will this match be played ?</inlineHelpText>
    <label>Where</label>
    <length>255</length>
    <type>Text</type>
</CustomField>